use_custom_libcxx_for_host = false
treat_warnings_as_errors = false
v8_enable_i18n_support = false
v8_enable_slow_dchecks = false
is_component_build = false
use_custom_libcxx = false
v8_static_library = true
strip_debug_info = true
symbol_level = 0
v8_target_cpu = "x86"
v8_embed_script = "vector.js"
target_cpu = "x86"
is_debug = false
is_clang = false
v8_extra_library_files = []
v8_use_snapshot = true
v8_use_external_startup_data = false
v8_monolithic = true